# dotfiles

./: .gitignore  conda-cpu.yml  conda.yml  kernel-desktop-bench.sh  pyproject.toml  setup_ubuntu.sh  starship.toml  uv-cpu.toml  uv.toml  vscode1.code-profile
Docker-compose/backup/: deeplx.yaml  mysql.yml  onenav.yaml  phpadmin.yml  subapi.yml  subweb.yml  syncthing.yaml
Docker-compose/caddy/: cert.sh
Nix-flake/: android.flake.nix  esp32.flake.nix  stm32.flake.nix
PowerShell7/: Microsoft.PowerShell_profile.ps1
alacritty/: alacritty.toml
aria2/: aria2.conf  aria2.session
autohotkey/: config.ahk
btop/: btop.conf
claude/: CLAUDE.md  settings.json
conda/: conda-gpu.yml
fastfetch/: config.jsonc
fcitx5/: config
fish/: config.fish
fuzzel/: fuzzel.ini
git/: .gitconfig
hypr/: hyprlock.conf
hypr/config/: autostart.conf  colors.conf  defaults.conf  keybinds.conf  monitor.conf
niri/: config.kdl  switch_monitors.sh
nushell/: config.nu
nvim/: README.md  init.lua  lazy-lock.json  lazyvim.json
nvim/lua/plugins/: osc52.lua  (+5 more)
obs-studio/: global.ini  user.ini
obs-studio/logs/: 2025-04-07 19-27-24.txt  2025-04-07 19-31-21.txt  2025-04-07 20-23-11.txt  2025-04-08 16-04-53.txt  2025-04-12 21-20-31.txt
opencode/: opencode.jsonc
opencode/plugins/: opencode-context-cache.mjs  rtk.ts
script/: setup_arch.sh  setup_ubuntu.sh
strawberry/: strawberry.conf
swaync/: config.json  style.css
tmux/: rmux.conf  tmux.conf
uv/: uv-gpu.toml
waybar/: config.jsonc  style.css
windows-terminal/: config-1920x1080-1.json
zellij/: config.kdl
zsh/: .zshrc
(+24 files in other folders)
